# directshare

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  flake.nix
.github/workflows/: cmake-multi-platform.yml
docs/: testing.md
include/: log.h  net_discovery.h
lib/: CMakeLists.txt  net_discovery.c
src/: CMakeLists.txt  main.c
tests/: CMakeLists.txt  test_sample.c
